--- a/atv - Disciplinas/style.css
+++ b/atv - Disciplinas/style.css
@@ -3,7 +3,7 @@ body {
     flex-direction: column;
     align-items: center;
     margin: 0;
-    background-image: url("img/Wings of Honour Screenshot 2024.08.27 - 22.17.09.37.png");
+    background-color: gray;
     color: cyan;
 }
 
